# tavily-mcp-search

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
mcp_tavily_search/: client.py  server.py  test_client.py  test_server.py
